# VideoEditor

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  engine_rpc.rs  engine_sidecar.rs  main.rs  openai_planner.rs  preview_url.rs
apps/desktop/src/app/: AppShell.tsx
apps/desktop/src/app/tabs/: AudioTab.tsx  ColorEffectsPlayback.tsx  ColorTab.tsx  EditTab.tsx  EffectsTab.tsx  ExportTab.tsx  FutureAiTab.tsx  HomeTab.tsx  PluginsTab.tsx  ShortcutsTab.tsx
apps/desktop/src/app/topbar/: TopBar.tsx
apps/desktop/src/components/: Button.tsx  ContextMenu.tsx  LogsDrawer.tsx  Modal.tsx  Panel.tsx  Slider.tsx  Tabs.tsx  Toggle.tsx
apps/desktop/src/features/color/: index.ts
apps/desktop/src/styles/: base.css  layout.css  panels.css  timeline.css
docs/: architecture.md  commands.md  feature-roadmap.md  plugin-api.md  project-format.md
engine/: CMakeLists.txt  vcpkg.json
engine/src/: main.cpp
engine/src/app/: EditorSession.hpp  EngineApp.cpp  EngineApp.hpp
engine/src/color/: ColorSettings.hpp  LutStore.hpp
engine/src/commands/: CommandHistory.hpp  CommandRegistry.hpp
engine/src/ipc/: JsonRpcServer.hpp  PreviewServer.hpp
engine/src/media/: FfprobeService.hpp  MediaImporter.hpp  MediaMetadata.hpp  ProxyService.hpp  ThumbnailService.hpp  WaveformService.hpp
engine/src/platform/: FfmpegLocator.hpp  GpuDetector.hpp  Logger.hpp
engine/src/playback/: DecodeSession.hpp  PlaybackEngine.hpp  PreviewController.hpp  PreviewStream.hpp
engine/src/plugins/: NativePluginHost.hpp  PluginManager.hpp
engine/src/project/: ProjectDatabase.hpp  ProjectManager.hpp  ProjectManifest.hpp
engine/src/render/: ExportEngine.hpp  ExportJob.hpp
engine/src/timeline/: Clip.hpp  Timeline.hpp  TimelineService.hpp  Track.hpp
engine/tests/: engine_core_tests.cpp
scripts/: build-desktop.ps1  build-engine.ps1  check-playback-config.mjs  check-prereqs.ps1  clean.ps1  configure-engine.ps1  dev-desktop.ps1  package-windows.ps1  setup-dev.ps1  setup-ffmpeg.ps1  test-engine.ps1
tools/ffmpeg/: README.md
(+12 files in other folders)
