[package]
name = "ai-video-editor-desktop"
version = "0.1.0"
description = "AI Video Editor desktop shell"
authors = ["AI Video Editor Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.2.0"
